--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda y accesorios AVAR</title>
-  <link rel="stylesheet" type="text/css" href="C:\Users\danie\Desktop\Backup\Versión 2.0\styles.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
  <header>
