Fix: Corregida ruta absoluta de script.js por relativa para despliegue

--- a/Index.html
+++ b/Index.html
@@ -84,6 +84,6 @@
     </div>
   </div>
 </footer>
-  <script src="C:\Users\danie\Desktop\Backup\Versión 2.0\script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
