--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,10 @@
     <img src="img/Logo.png" alt="Logo AVAR" class="logo">
     <h1>AVAR JOYERÍA</h1>
   </div>
+  <!-- Botón menú hamburguesa -->
+<div class="menu-toggle" id="menuToggle">
+  ☰
+</div>
   <nav>
     <ul>
       <li><a href="#inicio">Inicio</a></li>
