--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
- <header>
+  <header class="encabezado">
   <div class="logo-container">
-    <img src="img/Logo.png" alt="Logo AVAR" class="logo">
-    <h1>AVAR JOYERÍA</h1>
+    <img src="img/Logo.jpeg"" alt="Logo Avari Joyas" class="logo">
+    <h1 class="nombre-tienda">AVAR JOYAS</h1>
   </div>
   <!-- Botón menú hamburguesa -->
 <div class="menu-toggle" id="menuToggle">
