agregado de productos al catalogo

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,8 @@
     <option value="anillo">Anillos</option>
     <option value="collar">Collares</option>
     <option value="aretes">Aretes</option>
+    <option value="tobilleras">Tobilleras</option>
+    <option value="pulseras">Pulseras</option>
   </select>
 </div>
 <section id="catalogo" class="catalogo"></section>
