--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tienda y accesorios AVAR</title>
+  <title>AVAR Joyas</title>
   <link rel="stylesheet" href="./styles.css">
+  <!-- SEO y Open Graph para Avar Joyas -->
+<title>AVAR Joyas | Bisutería elegante y moderna</title>
+<meta name="description" content="En Avar Joyas creemos que la elegancia está en lo simple. Encuentra collares, aretes, pulseras, anillos y tobilleras que te harán sentir única todos los días.">
+<meta name="keywords" content="Avar Joyas, bisutería, joyas, collares, aretes, pulseras, anillos, tobilleras, accesorios, moda, elegancia, joyería artesanal">
+<meta name="author" content="AVAR Joyas">
+
+<!-- Open Graph (para compartir en redes sociales) -->
+<meta property="og:title" content="AVAR Joyas - Bisutería elegante y moderna">
+<meta property="og:description" content="Descubre la elegancia en lo simple con Avar Joyas. Collares, aretes, pulseras y más, creados para hacerte sentir única.">
+<meta property="og:image" content="https://avarjoyas.pages.dev/img/logo.jpg">
+<meta property="og:url" content="https://avarjoyas.pages.dev/">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="es_CO">
+
+<!-- Favicon -->
+<link rel="icon" href="img/logo.jpg" type="image/jpeg">
+
+<!-- Ajustes de vista móvil -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Color del navegador (Android / iOS) -->
+<meta name="theme-color" content="#d4af37">
 </head>
 <body>
   <header class="encabezado">
