se arregla gramatica logo a Logo

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <!-- Open Graph (para compartir en redes sociales) -->
 <meta property="og:title" content="AVAR Joyas - Bisutería elegante y moderna">
 <meta property="og:description" content="Descubre la elegancia en lo simple con Avar Joyas. Collares, aretes, pulseras y más, creados para hacerte sentir única.">
-<meta property="og:image" content="https://avarjoyas.pages.dev/img/logo.jpeg">
+<meta property="og:image" content="https://avarjoyas.pages.dev/img/Logo.jpeg">
 <meta property="og:url" content="https://avarjoyas.pages.dev/">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="es_CO">
 
 <!-- Favicon -->
-<link rel="icon" href="img/logo.jpeg" type="image/jpeg">
+<link rel="icon" href="img/Logo.jpeg" type="image/jpeg">
 
 <!-- Ajustes de vista móvil -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
