--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AVAR Joyas</title>
   <link rel="stylesheet" href="./styles.css">
-  <!-- SEO y Open Graph para Avar Joyas -->
-<title>AVAR Joyas | Bisutería elegante y moderna</title>
-<meta name="description" content="En Avar Joyas creemos que la elegancia está en lo simple. Encuentra collares, aretes, pulseras, anillos y tobilleras que te harán sentir única todos los días.">
-<meta name="keywords" content="Avar Joyas, bisutería, joyas, collares, aretes, pulseras, anillos, tobilleras, accesorios, moda, elegancia, joyería artesanal">
+<!-- 🔹 SEO y metadatos para AVAR Joyas -->
+<title>AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día</title>
+<meta name="description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
+<meta name="keywords" content="joyas, bisutería elegante, collares de mujer, aretes dorados, joyería artesanal, pulseras modernas, anillos de moda, accesorios femeninos, joyas AVAR, joyas Colombia">
 <meta name="author" content="AVAR Joyas">
+<meta name="robots" content="index, follow">
+<meta name="language" content="es">
 
-<!-- Open Graph (para compartir en redes sociales) -->
-<meta property="og:title" content="AVAR Joyas - Bisutería elegante y moderna">
-<meta property="og:description" content="Descubre la elegancia en lo simple con Avar Joyas. Collares, aretes, pulseras y más, creados para hacerte sentir única.">
-<meta property="og:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<!-- 🔹 Open Graph (Facebook, WhatsApp, LinkedIn, etc.) -->
+<meta property="og:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
+<meta property="og:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
+<meta property="og:image" content="https://avarjoyas.pages.dev/img/logoSEO.png">
 <meta property="og:url" content="https://avarjoyas.pages.dev/">
 <meta property="og:type" content="website">
-<meta property="og:locale" content="es_CO">
+<meta property="og:locale" content="es_ES">
 
-<!-- Favicon -->
-<link rel="icon" href="img/LogoSEO.png" type="image/jpeg">
+<!-- 🔹 Twitter Card (para compartir en X/Twitter) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
+<meta name="twitter:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
+<meta name="twitter:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
 
-<!-- Ajustes de vista móvil -->
+<!-- 🔹 Favicon -->
+<link rel="icon" type="image/png" href="img/favicon.png">
+
+<!-- 🔹 Rendimiento -->
+<link rel="preload" href="styles.css" as="style">
+<link rel="preload" href="script.js" as="script">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Color del navegador (Android / iOS) -->
-<meta name="theme-color" content="#d4af37">
+<!-- 🔹 Google SEO -->
+<meta itemprop="name" content="AVAR Joyas">
+<meta itemprop="description" content="Bisutería elegante y moderna hecha para brillar cada día.">
+<meta itemprop="image" content="https://avarjoyas.pages.dev/img/logoSEO.png">
 </head>
 <body>
   <header class="encabezado">
