se adiciona productos al catalogos y se agrega categoria al filtro

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!-- Inicio -->
 <section id="inicio" class="inicio">
   <h2>Bienvenido a AVAR Joyería</h2>
-  <p>Encuentra las joyas más exclusivas y elegantes para cada ocasión.</p>
+  <p>Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.</p>
 </section>
 
 <!-- Catálogo -->
@@ -76,6 +76,7 @@
     <option value="aretes">Aretes</option>
     <option value="tobilleras">Tobilleras</option>
     <option value="pulseras">Pulseras</option>
+    <option value="anillos">Anillos</option>
   </select>
 </div>
 <section id="catalogo" class="catalogo"></section>
