se modifica index para indexacion

--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,13 @@
 <meta itemprop="name" content="AVAR Joyas">
 <meta itemprop="description" content="Bisutería elegante y moderna hecha para brillar cada día.">
 <meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+
+<meta name="google-site-verification" content="google921def2cbc0c49fd.html" />
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://avarjoyas.pages.dev/contacto">
+<title>Contacto - AVAR Joyas</title>
 </head>
+
 <body>
   <header class="encabezado">
   <div class="logo-container">
@@ -57,11 +63,6 @@
       <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
-
-  <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://avarjoyas.pages.dev/catalogo">
-<title>Contacto - AVAR Joyas</title>
-
 </header>
 
 <!-- Inicio -->
