--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 <meta itemprop="name" content="AVAR Joyas">
 <meta itemprop="description" content="Bisutería elegante y moderna hecha para brillar cada día.">
 <meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+
+<meta name="google-site-verification" content="google921def2cbc0c49fd.html" />
+
 </head>
 <body>
   <header class="encabezado">
