--- a/catalogo.html
+++ b/catalogo.html
@@ -40,6 +40,7 @@
 <meta itemprop="description" content="Bisutería elegante y moderna hecha para brillar cada día.">
 <meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
 
+<meta name="google-site-verification" content="google921def2cbc0c49fd.html" />
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://avarjoyas.pages.dev/catalogo">
 <title>Catálogo - AVAR Joyas</title>
