--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- 🔹 Open Graph (Facebook, WhatsApp, LinkedIn, etc.) -->
 <meta property="og:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
 <meta property="og:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
-<meta property="og:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<meta property="og:image" content="https://avarjoyas.pages.dev/img/LogoSEO.jpeg>
 <meta property="og:url" content="https://avarjoyas.pages.dev/">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="es_ES">
@@ -25,10 +25,10 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
 <meta name="twitter:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
-<meta name="twitter:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<meta name="twitter:image" content="https://avarjoyas.pages.dev/img/LogoSEO.jpeg">
 
 <!-- 🔹 Favicon -->
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="img/favicon.jpeg">
 
 <!-- 🔹 Rendimiento -->
 <link rel="preload" href="styles.css" as="style">
@@ -38,7 +38,7 @@
 <!-- 🔹 Google SEO -->
 <meta itemprop="name" content="AVAR Joyas">
 <meta itemprop="description" content="Bisutería elegante y moderna hecha para brillar cada día.">
-<meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.jpeg">
 
 <meta name="google-site-verification" content="google921def2cbc0c49fd.html" />
 
