--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- 🔹 Open Graph (Facebook, WhatsApp, LinkedIn, etc.) -->
 <meta property="og:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
 <meta property="og:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
-<meta property="og:image" content="https://avarjoyas.pages.dev/img/LogoSEO.jpeg>
+<meta property="og:image" content="https://avarjoyas.pages.dev/img/LogoSEO.jpeg">
 <meta property="og:url" content="https://avarjoyas.pages.dev/">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="es_ES">
