SE AJUSTA EL ARCHIVO HTML DE CATALOGO, CONTACTO, SE MODIFICA SCRIPT, SE AGREGA BASE DE DATOS API

--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
 <meta name="twitter:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
 
 <!-- 🔹 Favicon -->
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="img/favicon.jpeg">
 
 <!-- 🔹 Rendimiento -->
 <link rel="preload" href="styles.css" as="style">
@@ -41,9 +41,7 @@
 <meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
 
 <meta name="google-site-verification" content="google921def2cbc0c49fd.html" />
-<meta name="robots" content="index, follow">
-<link rel="canonical" href="https://avarjoyas.pages.dev/contacto">
-<title>Contacto - AVAR Joyas</title>
+
 </head>
 
 <body>
