--- a/catalogo.html
+++ b/catalogo.html
@@ -62,7 +62,7 @@
       <div class="menu-toggle" id="menuToggle">☰</div>
       <nav>
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
           <li><a href="contacto.html">Contáctanos</a></li>
         </ul>
@@ -72,11 +72,17 @@
 
   <!-- 🔹 MAIN (todo el contenido principal dentro de este bloque) -->
   <main>
-    <!-- 🔹 SECCIÓN INICIO -->
-    <section id="inicio">
-      <h2>Todos los productos</h2>
-      <p>En Avar Joyas creemos que la elegancia está en lo simple, en esas piezas que te hacen sentir única todos los días. Descubre toda nuestra colección y encuentra tu pieza favorita.</p>
-    </section>
+
+    <!-- 🔹 SECCIÓN INICIO CON SLIDER DE TEXTO -->
+<section id="inicio" class="inicio-slider">
+  <div class="slider-text-wrapper">
+    <div class="text-slide active">
+      <h2>Bienvenido a AVAR Joyería</h2>
+      <p>Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.</p>
+    </div>
+      <!-- 🔹 Indicadores (puntos) -->
+  <div class="slider-dots"></div>
+</section>
 
     <!-- 🔹 FILTROS -->
     <div class="filtros">
