--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="menu-toggle" id="menuToggle">☰</div>
       <nav>
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
           <li><a href="contacto.html">Contáctanos</a></li>
         </ul>
