se arregla menu

--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
 
   <!-- Scripts -->
   <script src="./script.js"></script>
+
+  <div id="overlayMenu" class="overlayMenu"></div>
+
 </body>
 
 </html>
