--- a/catalogo.html
+++ b/catalogo.html
@@ -159,6 +159,8 @@
     </div>
   </footer>
 
+  <div id="overlayMenu" class="overlayMenu"></div>
+
   <!-- Scripts -->
   <script src="./script.js"></script>
 </body>
