--- a/contacto.html
+++ b/contacto.html
@@ -191,6 +191,8 @@
     </div>
   </footer>
 
+ <div id="overlayMenu" class="overlayMenu"></div>
+
   <!-- Scripts -->
   <script src="./script.js"></script>
 </body>
