se arregla menu

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div id="overlayMenu" class="overlayMenu"></div>
       <div class="menu-toggle" id="menuToggle">☰</div>
       <nav>
+        <span class="cerrar-menu" id="cerrarMenu">✕</span>
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
