se arregla contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -115,7 +115,7 @@
 
         <div class="social-contacto">
           <a href="https://wa.me/573214069288"><i class="fab fa-whatsapp"></i></a>
-          <a href="https://www.instagram.com/avarjoyas"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/avarjoyas?igsh=aWZzMWN2eHFhandr&utm_source=qr"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-facebook"></i></a>
         </div>
       </div>
@@ -125,7 +125,7 @@
         <h2>Sobre AVAR Joyas</h2>
         <p>En AVAR Joyas creemos que cada pieza refleja un momento especial. 
         Nos encanta ser parte de tus recuerdos más brillantes ✨</p>
-        <img src="img/Logo.jpeg" alt="Logo AVAR Joyas" class="logo-contacto">
+        <img src="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085225/Logo_zbkf1y.jpg" alt="Logo AVAR Joyas" class="logo-contacto">
       </div>
     </section>
   </main>
