se agrega punto slider

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
       <h2>Bienvenido a AVAR Joyería</h2>
       <p>Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.</p>
     </div>
+    
+    <div class="text-slide">
+      <h2>¡Información Importante!</h2>
+      <p>Recuerda que todos nuestros envíos son pago contra entrega, por lo cual no es necesario realizar ningún tipo de pago anticipao.</p>
+    </div>
 
     <div class="text-slide">
       <h2>Colecciones que inspiran</h2>
@@ -93,6 +98,7 @@
       <h2>Hecho con amor</h2>
       <p>Cada joya es elaborada a mano con pasión, detalle y un toque de brillo que te representa.</p>
     </div>
+
   </div>
 
   <!-- 🔹 Indicadores (puntos) -->
