se agrega boton ver mas

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   </div>
 
-  <!-- 🔹 Indicadores (puntos) -->
+<!-- 🔹 Indicadores (puntos) -->
   <div class="slider-dots"></div>
 </section>
 
@@ -110,8 +110,14 @@
   <h2>Nueva colección</h2>
 </section>
 
-    <!-- 🔹 CATÁLOGO DINÁMICO -->
+<!-- 🔹 CATÁLOGO DINÁMICO -->
     <section id="catalogo" class="catalogo"></section>
+
+<!-- 🔹 BOTÓN VER MÁS -->
+<div class="ver-mas-contenedor">
+  <a href="catalogo.html" class="btn-ver-mas">Ver más productos</a>
+</div>
+
   </main>
   <!-- 🔹 FIN DEL MAIN -->
 
