se arregla boton

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 </section>
 
 <!-- 🔹 CATÁLOGO DINÁMICO -->
-    <section id="catalogo" class="catalogo"></section>
+<section id="catalogo" class="catalogo"></section>
 
 <!-- 🔹 BOTÓN VER MÁS -->
-<div class="ver-mas-contenedor">
-  <a href="catalogo.html" class="btn-ver-mas">Ver más productos</a>
+<div class="ver-mas-container">
+  <a href="catalogo.html" class="btn-ver-mas">Ver más</a>
 </div>
 
   </main>
